log
Sat 24 Sep 2022 01:57:29 AM UTC: 
 tests:  1|8
total_score: 0/70
8cc628b
Sat 24 Sep 2022 02:24:59 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:5: error: unknown type name ‘create’
   40 |     create spect;
      |     ^~~~~~
treemap.c:40:12: error: unused variable ‘spect’ [-Werror=unused-variable]
   40 |     create spect;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
7436c3d
